--- a/appsscript.json
+++ b/appsscript.json
@@ -1,13 +1,11 @@
 {
-  "timeZone": "Europe/Amsterdam",
+  "timeZone": "Europe/Brussels",
   "dependencies": {
-    "enabledAdvancedServices": [
-      {
-        "userSymbol": "Calendar",
-        "version": "v3",
-        "serviceId": "calendar"
-      }
-    ]
+    "enabledAdvancedServices": [{
+      "userSymbol": "Calendar",
+      "serviceId": "calendar",
+      "version": "v3"
+    }]
   },
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8"
